WIN32_LINKOPTS = [
    "-DEFAULTLIB:user32.lib",
    "-DEFAULTLIB:gdi32.lib",
    "-DEFAULTLIB:shell32.lib",
]

WIN32_DEFINES = [
    "_GLFW_WIN32",
]

LINUX_LINKOPTS = []

LINUX_DEFINES = [
    "_GLFW_HAS_XF86VM",
    "_GLFW_X11",
]

cc_library(
    name = "glfw",
    srcs = glob([
        "src/*.h",
        "src/*.c",
    ]),
    hdrs = glob([
        "**/GLFW/*.h",
    ]),
    includes = ["include"],
    linkopts = select({
        "@bazel_tools//src/conditions:windows": WIN32_LINKOPTS,
        "@bazel_tools//src/conditions:linux_x86_64": LINUX_LINKOPTS,
    }),
    local_defines = select({
        "@bazel_tools//src/conditions:windows": WIN32_DEFINES,
        "@bazel_tools//src/conditions:linux_x86_64": LINUX_DEFINES,
    }),
    visibility = ["//visibility:public"],
)
